# mindMate

./: CRISIS_DETECTION_TEST.md  EMAILJS_SETUP.md  README.md
agent/: README.md  langgraph.json  main.py  pyproject.toml
agent/.langgraph_api/: .langgraph_ops.pckl
agent/agents/: __init__.py  chatbot_agent.py  crisis_detector.py  mindmate_graph.py  sentiment_analyzer.py
front/: README.md  package.json  pnpm-lock.yaml
front/app/: globals.css  layout.tsx  page.tsx  providers.tsx
front/components/: ChatBot.tsx  EmergencyCallDialog.tsx  MoodChart.tsx  MoodTracker.tsx  OnboardingModal.tsx
front/lib/: api.ts
