[project]
name = "mindmate-agent"
version = "0.1.0"
description = "MindMate AI Agent - 우울증 관리 AI 백엔드"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "openai>=1.54.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.9.0",
    "python-multipart>=0.0.9",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "langchain-community>=0.3.0",
    "langgraph-cli[inmem]>=0.2.0",
    "httpx>=0.24.0",
    "cartesia>=2.0.15",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agents"]
